src/examples/type_errors/BoolToUInt.sol
pragma solidity ^0.5.0;

contract BoolToUInt {

	function f() {
		uint x;
		x = false;
	}

}
